<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="aplicativo_lista_vip_curso_android">Aplicativo Lista VIP Curso Android</string>
    <string name="nome">Nome</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="selecione_um_curso">Selecione um Curso...</string>
</resources>